fix errors in the arrows and also scrolling on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,6 +53,10 @@ body {
   scrollbar-width: none;
 }
 
+.horizontal-scroll-strip > * {
+  scroll-snap-align: start;
+}
+
 .horizontal-scroll-strip::-webkit-scrollbar {
   display: none;
 }
